--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Font Awesome Bootstrap-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script type="text/javascript" src="css/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <!--<script>document.domain = "localhost";</script>-->
-    <!--war notwendig für die TYPEKIT einbindung-->
-    <script>
+    <!--<script>document.domain = "krankypanky.github.io";</script>
+    war notwendig für die TYPEKIT einbindung-->
+    <!--<script>
         (function (d) {
             var config = {
                     kitId: 'zdp4htj',
@@ -45,7 +44,7 @@
             };
             s.parentNode.insertBefore(tk, s)
         })(document);
-    </script>
+    </script>-->
 </head>
 
 <body>
