--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--<script>document.domain = "krankypanky.github.io";</script>
     war notwendig für die TYPEKIT einbindung-->
     <!--<script>
-        (function (d) {
+        /*(function (d) {
             var config = {
                     kitId: 'zdp4htj',
                     scriptTimeout: 3000,
@@ -44,7 +44,7 @@
             };
             s.parentNode.insertBefore(tk, s)
         })(document);
-    </script>-->
+    */</script>-->
 </head>
 
 <body>
